testsuite/tests/generic_interfaces/bad_arg_number/test.out
== foo.lkt ==
foo.lkt:17:5: error: Interface and method implementation don't have the same number of arguments. Interface has 0, implemetation has 1
17 |     fun prop(arg: Bool): Bool implements Interface.method = arg
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
